; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/arm_atsam/extr_eeprom.c_eeprom_write_byte.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/arm_atsam/extr_eeprom.c_eeprom_write_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buffer = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eeprom_write_byte(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = ptrtoint i32* %6 to i64
  store i64 %7, i64* %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32*, i32** @buffer, align 8
  %10 = load i64, i64* %5, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  store i32 %8, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
